--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@vercel/og": "^0.0.21",
     "classnames": "^2.3.2",
+    "cli": "^1.0.1",
     "date-fns": "^2.29.3",
     "intl-segmenter-polyfill": "^0.4.4",
     "next": "^13.1.1",
@@ -31,7 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "sanity": "^3.2.1",
+    "sanity": "^3.8.3",
     "sanity-plugin-asset-source-unsplash": "^1.0.6",
     "server-only": "^0.0.1",
     "styled-components": "^5.3.6",
