--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "^13.1.1",
     "@portabletext/react": "^2.0.0",
     "@sanity/code-input": "^4.1.0",
+    "@sanity/color-input": "^3.0.2",
     "@sanity/demo": "^1.0.1",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.2.1",
